--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "daypilot-pro-vue": "https://npm.daypilot.org/daypilot-pro-vue/trial/2024.4.6180.tar.gz",
     "pinia": "^2.2.6",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2"
   },
